# shop

./: .env.sample  .gitignore  Dockerfile  TODO.md  autoapp.py  docker-compose.yml  pyproject.toml  start_server.sh  tox.ini
.github/workflows/: python-app.yml
flask_extenstion/: __init__.py  flask_extension.py
flaskshop/: .dockerignore  app.py  commands.py  extensions.py  logger.py  random_data.py  settings.py  utils.py
flaskshop/account/: forms.py  models.py  utils.py  views.py
flaskshop/api/: __init__.py  api.py  auth.py  product.py
flaskshop/checkout/: models.py  views.py
flaskshop/corelib/: __init__.py  mc.py  utils.py
flaskshop/corelib/local_cache/: __init__.py  local_cache.py
flaskshop/corelib/redis/: __init__.py
flaskshop/corelib/redis/flask_redis/: __init__.py  config.py  flask_redis.py  mocker.py
flaskshop/corelib/redis/props/: __init__.py  date_filter.py  props_item.py  props_mixin.py
flaskshop/dashboard/: forms.py  models.py
flaskshop/dashboard/views/: __init__.py  bp.py  discount.py  mail.py  order.py  product.py  site.py  user.py
flaskshop/dashboard_api/: api_app.py  views.py
flaskshop/discount/: models.py  views.py
flaskshop/order/: __init__.py  models.py  views.py
flaskshop/order/payment/: __init__.py
flaskshop/plugin/: manager.py  utils.py
flaskshop/product/: forms.py  models.py  views.py
flaskshop/public/: models.py  search.py  views.py
flaskshop/templates/: base.html
flaskshop/templates/account/: details.html  login.html  password_reset.html  reser_passwd_mail.html  signup.html
flaskshop/templates/account/partials/: address_form.html  email_confirmation.html  email_forgot_passwd.html  login_form.html
flaskshop/templates/checkout/: note.html  shipping.html
flaskshop/templates/dashboard/: _macros.html  list.html
flaskshop/templates/dashboard/order/: list.html
flaskshop/templates/dashboard/product/: list.html  product_create_step2.html  product_edit.html
flaskshop/templates/errors/: 401.html
flaskshop/templates/orders/: _ordered_items_table.html  checkout_error.html
flaskshop/templates/products/: _items.html  details.html  product_list_base.html
flaskshop/templates/public/: home.html  search_result.html
plugin_example/conversations/: utils.py  views.py
plugin_example/conversations/templates/: conversation.html  inbox.html  message_form.html  sent.html  trash.html
tests/: conftest.py  consts.py  factories.py
tests/account/: test_forms.py  test_functional.py  test_models.py
