[tool.poetry]
name = "flask-shop"
version = "0.1.0"
description = ""
authors = ["nazarKobryn <kobrinnazar05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.4.0"
aniso8601 = "8.0.0"
arrow = "0.15.5"
attrs = "19.3.0"
Babel = "2.9.1"
bcrypt = "3.1.7"
blinker = "1.4"
Bootstrap-Flask = "1.2.0"
certifi = "2019.11.28"
cffi = "1.15.1"
chardet = "3.0.4"
Click = "^8.0.0"
cryptography = "37.0.2"
dominate = "2.4.0"
elasticsearch = "7.10.0"
elasticsearch-dsl = "7.1.0"
Faker = "4.0.0"
Flask = "1.1.1"
Flask-Babel = "2.0.0"
Flask-Bcrypt = "0.7.1"
Flask-CKEditor = "0.4.6"
Flask-DebugToolbar = "0.10.1"
Flask-Login = "0.4.1"
Flask-Mail = "0.9.1"
Flask-Migrate = "2.5.2"
flask-restplus = "0.13.0"
Flask-SQLAlchemy = "2.4.1"
Flask-WTF = "0.14.2"
idna = "2.8"
importlib-metadata = "1.5.0"
itsdangerous = "1.1.0"
Jinja2 = "2.11.1"
jsonschema = "3.2.0"
libgravatar = "0.2.3"
Mako = "1.1.1"
MarkupSafe = "1.1.1"
phonenumbers = "8.11.3"
pluggy = "0.13.1"
psycopg2-binary = "2.9.2"
pycparser = "2.19"
pycryptodomex = "3.9.4"
PyMySQL = "0.9.3"
pyOpenSSL = "19.1.0"
pyrsistent = "0.15.7"
python-alipay-sdk = "2.0.1"
python-dateutil = "2.8.1"
python-dotenv = "0.10.5"
python-editor = "1.0.4"
pytz = "2019.3"
redis = "3.4.1"
requests = "2.22.0"
six = "1.14.0"
SQLAlchemy = "1.3.13"
text-unidecode = "^1.0"
urllib3 = "1.25.8"
visitor = "0.1.3"
Werkzeug = "0.16.1"
WTForms = "2.2.1"
zipp = "2.1.0"
locust = "^1.0.0"
pytest = "^7.1.2"
WebTest = "^3.0.0"
factory-boy = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.1.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
