[tool.poetry]
name = "flask-shop"
version = "0.1.0"
description = ""
authors = ["nazarKobryn <kobrinnazar05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.1.0"
Flask-Babel = "^2.0.0"
Flask-Bcrypt = "^1.0.1"
Flask-CKEditor = "^0.4.6"
Flask-DebugToolbar = "^0.13.1"
Flask-Login = "^0.6.2"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^3.1.0"
flask-restplus = "^0.13.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"
Bootstrap-Flask = "^2.1.0"
WTForms = "^3.0.1"
locust = "^2.11.1"
WebTest = "^3.0.0"
factory-boy = "^3.2.1"
Werkzeug = "^2.2.2"
requests = "^2.28.1"
redis = "^4.3.4"
python-dotenv = "^0.20.0"
python-dateutil = "^2.8.2"
python-alipay-sdk = "^3.0.4"
pluggy = "^1.0.0"
phonenumbers = "^8.12.54"
libgravatar = "^1.0.0"
Jinja2 = "^3.1.2"
itsdangerous = "^2.1.2"
elasticsearch = "^7.10.0"
click = "^8.1.3"
arrow = "^1.2.2"
Faker = "^14.2.0"
elasticsearch-dsl = "^7.1.0"
email-validator = "^1.2.1"
markup = "^0.2"
MarkupSafe = "^2.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
